Update wedding site

--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
 
 
 <!-- 
-takhle se vkladaji linky do textu co se oteviraji v novym okne <a href="https://www.czechitas.cz" target="_blank"> 
+takhle se vkladaji linky do textu co se oteviraji v novym okne <a href="https://www.janevimabytonebylodivny.cz" target="_blank"> 
   <a href="mailto:muj@email.cz">Odkaz na email</a>
   -->
