--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
     <div class="section-line"></div>
 
     <div class="section-content">
-      <p>Elegantní odpolední / divadelní styl.</p>
+      <p>Chceme hlavně, abyste se cítili dobře.<br> 
+         Žádné barevné schéma není, avšak tmavší a studenější barvy jsou vítány.<br>
+         Ty pastelové si po létě rády odpočinou. Černá není nepřítel.<br>
+        Bude konec září, něco přes sebe na večer je určitě fajn.</p>
     </div>
   </div>
 </section>
