--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </section>
 
 <footer>
-  <p>26. září 2026 · Winternitzova vila · Praha</p>
+  <p>&copy; Sára 2026 · První web v životě · Asi i poslední</p>
 </footer>
 
 </body>
